--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "npm run unit"
   },
   "dependencies": {
-    "vue": "^2.2.2"
+    "fastclick": "^1.0.6",
+    "vue": "^2.2.2",
+    "vue-router": "^2.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
